--- a/app/src/main/res/layout/activity_listagem_prestador.xml
+++ b/app/src/main/res/layout/activity_listagem_prestador.xml
@@ -109,15 +109,15 @@
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:background="@color/Branco"
-                    app:srcCompat="@drawable/cano"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    app:srcCompat="@drawable/ic_arquitetowhite" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:text="Encanador"
+                    android:text="Arquiteto"
                     android:textColor="@color/Preto" />
 
             </androidx.cardview.widget.CardView>
@@ -135,14 +135,14 @@
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:background="@color/Branco"
-                    app:srcCompat="@drawable/cano" />
+                    app:srcCompat="@drawable/ic_azulejista" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:text="Encanador"
+                    android:text="Azulegista"
                     android:textColor="@color/Preto" />
             </androidx.cardview.widget.CardView>
 
@@ -159,14 +159,14 @@
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:background="@color/Branco"
-                    app:srcCompat="@drawable/cano" />
+                    app:srcCompat="@drawable/ic_carpinteiro" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:text="Encanador"
+                    android:text="Carpinteiro"
                     android:textColor="@color/Preto" />
             </androidx.cardview.widget.CardView>
 
@@ -183,14 +183,14 @@
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:background="@color/Branco"
-                    app:srcCompat="@drawable/cano" />
+                    app:srcCompat="@drawable/ic_jardineiro" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:text="Encanador"
+                    android:text="Jardineiro"
                     android:textColor="@color/Preto" />
             </androidx.cardview.widget.CardView>
 
@@ -207,7 +207,7 @@
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:background="@color/Branco"
-                    app:srcCompat="@drawable/cano" />
+                    app:srcCompat="@drawable/ic_encanador" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -225,22 +225,95 @@
                 android:layout_marginLeft="15dp">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/imageView6"
                     android:layout_width="56dp"
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:background="@color/Branco"
-                    app:srcCompat="@drawable/cano" />
+                    app:srcCompat="@drawable/ic_gesseiro" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:text="Encanador"
+                    android:text="Gesseiro"
                     android:textColor="@color/Preto" />
 
             </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/id_nicho7"
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="15dp">
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="56dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:background="@color/Branco"
+                    app:srcCompat="@drawable/ic_pintor" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:text="Pintor"
+                    android:textColor="@color/Preto" />
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/id_nicho8"
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="15dp">
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="56dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:background="@color/Branco"
+                    app:srcCompat="@drawable/ic_pedreiro" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:text="Pedreiro"
+                    android:textColor="@color/Preto" />
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/id_nicho10"
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="15dp">
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="56dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:background="@color/Branco"
+                    app:srcCompat="@drawable/ic_eletrecista" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:text="Eletricista"
+                    android:textColor="@color/Preto" />
+
+            </androidx.cardview.widget.CardView>
+
 
         </LinearLayout>
 
