--- a/app/src/main/res/layout/activity_listagem_prestador.xml
+++ b/app/src/main/res/layout/activity_listagem_prestador.xml
@@ -325,17 +325,17 @@
         android:layout_height="510dp"
         tools:listitem="@layout/lista_prestador_layout" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:menu="@menu/menu">
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:menu="@menu/menu">-->
 
-        <fragment
-            android:id="@+id/fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" />
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+<!--        <fragment-->
+<!--            android:id="@+id/fragment"-->
+<!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:defaultNavHost="true"-->
+<!--            app:navGraph="@navigation/nav_graph" />-->
+<!--    </com.google.android.material.bottomnavigation.BottomNavigationView>-->
 </LinearLayout>
