--- a/app/src/main/res/layout/perfil_prestador.xml
+++ b/app/src/main/res/layout/perfil_prestador.xml
@@ -259,15 +259,15 @@
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="109dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/textView12"
-            tools:layout_editor_absoluteX="0dp"
-            tools:listitem="@layout/layout_portifolio" />
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/recyclerView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="109dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView12"-->
+<!--            tools:layout_editor_absoluteX="0dp"-->
+<!--            tools:listitem="@layout/layout_portifolio" />-->
 
         <TextView
             android:id="@+id/textView13"
@@ -280,138 +280,138 @@
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="19dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView1"
-            android:layout_width="match_parent"
-            android:layout_height="109dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/textView13"
-            tools:layout_editor_absoluteX="0dp"
-            tools:listitem="@layout/layout_portifolio" />
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/recyclerView1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="109dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView13"-->
+<!--            tools:layout_editor_absoluteX="0dp"-->
+<!--            tools:listitem="@layout/layout_portifolio" />-->
 
 
-        <!--        <HorizontalScrollView-->
-        <!--            android:id="@+id/horizontalScrollView2"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="105dp"-->
-        <!--            android:background="@color/Primaria"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/textView12">-->
+                <HorizontalScrollView
+                    android:id="@+id/horizontalScrollView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="105dp"
+                    android:background="@color/Primaria"
+                    app:layout_constraintTop_toBottomOf="@+id/textView12">
 
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:orientation="horizontal">-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
-
-        <!--&lt;!&ndash;                    <ImageView&ndash;&gt;-->
-
-        <!--&lt;!&ndash;                        android:id="@+id/btn_add"&ndash;&gt;-->
-        <!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
-        <!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
-        <!--&lt;!&ndash;                        android:layout_gravity="center"&ndash;&gt;-->
-        <!--&lt;!&ndash;                        android:src="@drawable/add" />&ndash;&gt;-->
-
-
-        <!--                    <Button-->
-        <!--                        android:id="@+id/btn_test"-->
-        <!--                        android:layout_width="wrap_content"-->
-        <!--                        android:layout_height="wrap_content"-->
-        <!--                        android:text="Button" />-->
-        <!--                </androidx.cardview.widget.CardView>-->
-
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:id="@+id/card1"-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
-
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
 
         <!--                    <ImageView-->
-        <!--                        android:id="@+id/imagem_test"-->
-        <!--                        android:layout_width="match_parent"-->
-        <!--                        android:layout_height="match_parent"-->
-        <!--                        app:srcCompat="@drawable/images" />-->
-        <!--                </androidx.cardview.widget.CardView>-->
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
+        <!--                        android:id="@+id/btn_add"-->
+        <!--                        android:layout_width="wrap_content"-->
+        <!--                        android:layout_height="wrap_content"-->
+        <!--                        android:layout_gravity="center"-->
+        <!--                        android:src="@drawable/add" />-->
 
-        <!--                </androidx.cardview.widget.CardView>-->
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp" />-->
-        <!--            </LinearLayout>-->
-        <!--        </HorizontalScrollView>-->
+                            <Button
+                                android:id="@+id/btn_test"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button" />
+                        </androidx.cardview.widget.CardView>
 
-        <!--        <TextView-->
-        <!--            android:id="@+id/textView14"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginTop="4dp"-->
-        <!--            android:text="Comentarios"-->
-        <!--            android:textColor="@color/Branco"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"-->
-        <!--            tools:ignore="MissingConstraints"-->
-        <!--            tools:layout_editor_absoluteX="16dp" />-->
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/card1"
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
 
-        <!--        <HorizontalScrollView-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="105dp"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/textView14"-->
-        <!--            tools:ignore="MissingConstraints">-->
 
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:orientation="horizontal">-->
+                            <ImageView
+                                android:id="@+id/imagem_test"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:srcCompat="@drawable/images" />
+                        </androidx.cardview.widget.CardView>
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
 
-        <!--                </androidx.cardview.widget.CardView>-->
+                        </androidx.cardview.widget.CardView>
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp" />
+                    </LinearLayout>
+                </HorizontalScrollView>
 
-        <!--                </androidx.cardview.widget.CardView>-->
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="Comentarios"
+                    android:textColor="@color/Branco"
+                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteX="16dp" />
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="105dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14"
+                    tools:ignore="MissingConstraints">
 
-        <!--                </androidx.cardview.widget.CardView>-->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:layout_width="150dp"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_marginLeft="15dp"-->
-        <!--                    android:layout_marginTop="4dp">-->
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
 
-        <!--                </androidx.cardview.widget.CardView>-->
+                        </androidx.cardview.widget.CardView>
 
-        <!--            </LinearLayout>-->
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
 
-        <!--        </HorizontalScrollView>-->
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="4dp">
+
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
